--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/lihp2014/douban-trailer#readme",
   "dependencies": {
-    "koa": "^2.6.2"
+    "ejs": "^2.6.1",
+    "koa": "^2.6.2",
+    "pug": "^2.0.3"
   }
 }
