--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa-views": "^6.1.4",
     "parcel-bundler": "^1.10.3",
     "pug": "^2.0.3",
+    "puppeteer": "^1.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   },
