--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "koa": "^2.6.2",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
+    "nanoid": "^2.0.0",
     "parcel-bundler": "^1.10.3",
     "pug": "^2.0.3",
     "puppeteer": "^1.11.0",
+    "qiniu": "^7.2.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "request": "^2.88.0",
