--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "koa": "^2.6.2",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
+    "mongoose": "^5.3.15",
     "nanoid": "^2.0.0",
     "parcel-bundler": "^1.10.3",
     "pug": "^2.0.3",
