--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bcrypt": "^3.0.2",
     "ejs": "^2.6.1",
     "koa": "^2.6.2",
     "koa-static": "^5.0.0",
