--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^3.0.2",
     "ejs": "^2.6.1",
+    "glob": "^7.1.4",
     "koa": "^2.6.2",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
