--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ejs": "^2.6.1",
     "glob": "^7.1.4",
     "koa": "^2.6.2",
+    "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
     "mongoose": "^5.3.15",
